fix(description-list): Preventing text-overflow on terms (v3) - front-2096 (#1953)

--- a/src/implementations/vanilla/components/description-list/description-list-print.scss
+++ b/src/implementations/vanilla/components/description-list/description-list-print.scss
@@ -19,6 +19,7 @@ $_text-color: map.get(theme.$color, 'grey-100');
   font: map.get(theme.$font-prolonged-print, 'xl');
   font-family: #{map.get(theme.$font-family-print, 'alt')};
   font-weight: map.get(theme.$font-weight-print, 'bold');
+  overflow-wrap: break-word;
 }
 
 .ecl-description-list__definition {
